z-index issues with menu overlap

--- a/CSS/MainCSS_Narrow.css
+++ b/CSS/MainCSS_Narrow.css
@@ -117,7 +117,7 @@ ported from other sites. Also will have near clouds image at base */
 #menu{
     display:block;
     position:fixed;
-    width:100%
+    width:100px;
     top:0px;
     left:0px;
     z-index:3;
